fix(web): #544 add overflow for pre and code elements

--- a/actor-sdk/sdk-web/src/styles/messages.scss
+++ b/actor-sdk/sdk-web/src/styles/messages.scss
@@ -718,6 +718,7 @@ $sticker-max-size: 180px;
     pre,
     samp {
       margin: 0 0 7px;
+      overflow: auto;
     }
 
     .emoji-outer {
